--- a/2.md
+++ b/2.md
@@ -22,9 +22,10 @@
 
 Part 2:
 
-Can one person make a difference? What the evidence says.
+Может ли один человек сделать мир лучше? О чем говорят факты
 
-# Can one person make a difference? What the evidence says.
+# Может ли один человек сделать мир лучше? О чем говорят факты
+
 
 By <span class="byline author vcard"><a href="https://80000hours.org/author/benjamin-todd/" rel="author" class="fn">Benjamin Todd</a></span> &middot; Last updated <time class="update" datetime="2017-04-28T00:00:00+00:00">April 2017</time>
 
@@ -44,30 +45,29 @@ In this article, we start by estimating how much good you could do by becoming a
 
 ## How much impact do doctors have?
 
-Many people who want to help others become doctors. One of our early readers, Dr. Greg Lewis, did exactly that. “I want to study medicine because of a desire I have to help others,” he wrote on his university application, “and so the chance of spending a career doing something worthwhile I can’t resist.”
-
-So, we wondered: how much difference does becoming a doctor really make? In 2012, we teamed up with Greg to find out, and this work is now being reviewed for publication.
-
-Since a doctor’s main purpose is to improve health, we tried to figure out how much extra “health” one doctor actually adds to humanity. We found that, on average in the course of their career, a doctor in the UK will enable their patients to live an extra combined 140 years of healthy life, either by extending their lifespans or by improving their overall health. There is, of course, a huge amount of uncertainty in this figure, but the real figure is unlikely to be more than ten times higher than 140.[^:`<p>In our <a href="https://80000hours.org/career-guide/top-careers/profiles/medical-careers/">career review on medical careers</a>, which is based on the research we mention, we provide an optimistic all considered estimate of 4 DALYs averted per year (mean). Over a 35 year career, that’s 140 DALYs averted. Individual doctors will do more or less depending on their ability and speciality.</p>
+Если задуматься о профессиях, которые делают мир лучше, на ум обычно приходят профессии учителя, социального работника, врача. Поэтому, запуская проект «80 тысяч часов», мы в первую очередь задались вопросом: а сколько пользы эти профессии приносят на самом деле?
+Сначала мы подсчитали, сколько пользы может принести практикующий врач. Основная цель врачей — улучшать состояние здоровья людей, поэтому мы попытались оценить, сколько «здоровья» прибавляют людям врачи.
+В сотрудничестве с кэмбриджским экспертом в области здравоохранения Грегом Льюисом мы выяснили, что в среднем за всю свою практику врач в Великобритании может в сумме продлить людям жизнь на 120 лет, либо увеличивая продолжительность их жизней, либо улучшая состояние их здоровья. Показатели далеко не точные, но едва ли они могут быть выше более чем в 10 раз. Соответствующее исследование готовится к печати, в сносках можно найти на него ссылку.
+[^:`<p>In our <a href="https://80000hours.org/career-guide/top-careers/profiles/medical-careers/">career review on medical careers</a>, which is based on the research we mention, we provide an optimistic all considered estimate of 4 DALYs averted per year (mean). Over a 35 year career, that’s 140 DALYs averted. Individual doctors will do more or less depending on their ability and speciality.</p>
 <p>A standard conversion rate is 30 DALYs = 1 life saved.<br />
 <br />
 Source: <a href="https://openknowledge.worldbank.org/bitstream/handle/10986/7039/364010PAPER0Gl101OFFICIAL0USE0ONLY1.pdf?sequence=1">World Bank</a>, p. 402, retrieved 31-March-2016`]
 
-Using a standard conversion rate (used by the World Bank among other institutions) of 30 extra years of healthy life to one “life saved,” 140 years of healthy life is equivalent to 5 lives saved. This is clearly a significant impact, however it’s less of an impact than many people expect doctors to have.
+Если применить к этому числу стандартный коэффициент пересчета (который среди прочих используется Всемирным банком), согласно которому 30 дополнительных лет здоровой жизни приравниваются к «спасению одной жизни», то продление жизни на 120 лет можно приравнять к спасению четырех жизней. Без сомнения, это значительный результат, однако это намного меньше, чем мы привыкли ожидать от врачей. Есть три причины такой низкой эффективности:
 
-There are three main reasons for this.
+1.  Среди ученых бытует мнение, что медицина увеличила среднюю продолжительность жизни всего на несколько лет. За последние 100 лет на рост продолжительности жизни больше всего повлияло улучшение питания, санитарных условий, материального благосостояния и других факторов, не связанных с медициной.
 
-1. Researchers largely agree that medicine has only increased average life expectancy by a few years. Most gains in life expectancy over the last 100 years have instead occurred due to better nutrition, improved sanitation, increased wealth, and other factors.
-1. Doctors are only one part of the medical system, which also relies on nurses and hospital staff, as well as overhead and equipment. The impact of medical interventions is shared between all of these elements.
-1. Most importantly, there are already a lot of doctors in the developed world, so if you don’t become a doctor, someone else will be available to perform the most critical procedures. *Additional* doctors therefore only enable us to carry out procedures that deliver less significant and less certain results.
+2. Врачи — только часть здравоохранительной системы, которая также зависит от медсестер, больничного персонала, оборудования, инфраструктуры. Эффект от медицинского вмешательства складывается из всех этих элементов.
 
-This last point is illustrated by the chart below, which compares the impact of doctors in different countries. The y-axis shows the amount of ill health in the population, measured in Disability-Adjusted Life Years (aka “DALYs”) per 100,000 people, where one DALY equals one year of life lost due to ill health. The x-axis shows the number of doctors per 100,000 people.
+3.  Что еще важнее, в развитом мире уже достаточно врачей, так что самые важные процедуры будут проведены независимо от того, станете вы врачом или нет. Поэтому с увеличением количества врачей польза, которую они будут приносить, будет все менее значимой и все более сомнительной.
+
+График демонстрирует зависимость между количеством врачей и уровнем здоровья в разных странах. По вертикали отложен уровень заболеваемости населения, указанный в единицах «DALY»[3] на 100 000 человек, где DALY — это год жизни, потерянный из-за болезни. По горизонтали — количество врачей на 100 000 человек.
 
 ![DALYs compared to doctors](https://cdn.80000hours.org/wp-content/uploads/2017/03/80K_graph_Dalys-doctors_V1-01.jpg)[`DALYs per 100,000 people versus doctors per 100,000 people. We used WHO data from 2004. Line is the best fitting hyperbola determined by non-linear least square regression. Full explanation in this <a href="https://drive.google.com/file/d/0B2kbwTsBB1fwZThKLVEtME5idU0/view">paper</a>.`]
 
-You can see that the curve goes nearly flat once you have more than 150 doctors per 100,000 people. After this point (which almost all developed countries meet), additional doctors only achieve a small impact on average.
+Как видим, кривая остается практически неизменной, когда на 100 000 человек приходится более 150 врачей. Выше этого уровня (которого достигают чуть ли не все развитые страны) увеличение количества врачей мало что меняет.
 
-So if you become a doctor in a rich country like the US or UK, you may well do more good than you would in many other jobs, and if you would be an exceptional doctor, then you’ll have a bigger impact than these averages. But it probably won’t be a huge impact.
+Поэтому, если вы станете врачом, вам, вероятно, удастся сделать больше, чем на какой-то обычной работе, но едва ли ваши заслуги перед миром будут поистине значительны.
 
 In fact, in the <a href="/career-guide/anyone-make-a-difference/">next article</a>, we’ll show how almost any college graduate can do more to save lives than a typical doctor. And in the guide, we’ll cover many other examples of common but ineffective attempts to do good.
 
@@ -107,15 +107,16 @@ Leaving the medical field, <a href="/career-guide/high-impact-jobs/">later in th
 
 Or, let’s think even more broadly. Roger Bacon and Galileo pioneered the scientific method, without which none of the discoveries we covered above would have been possible, along with other major technological breakthroughs like the Industrial Revolution. These individuals were able to do vastly more good than even outstanding medical practitioners.
 
-### The unknown Soviet Lieutenant Colonel who saved your life
+### Неизвестный советский подполковник, который спас вам жизнь
 
 ![Stanislav Petrov probably saved your life](https://cdn.80000hours.org/wp-content/uploads/2016/04/Stanislav-Petrov.png)[``]
 
-Or consider <a href="http://www.bbc.com/news/world-europe-24280831">the story of Stanislav Petrov,</a> a Lieutenant Colonel in the Soviet army during the Cold War. In 1983, Petrov was on duty in a Soviet missile base when early warning systems apparently detected an incoming missile strike from the United States. Protocol dictated that the Soviets order a return strike.
+Or consider <a href="http://www.bbc.com/news/world-europe-24280831">the story of Stanislav Petrov,</a> a Lieutenant Colonel in the Soviet army during the Cold War. Дело было в 1983 году. Петров был на дежурстве на ракетной базе СССР, когда системы раннего оповещения якобы обнаружили надвигающийся ракетно-ядерный удар со стороны США. По протоколу нужно было нанести ответный удар, но Петров рассудил, что ракет было слишком мало, и не нажал на кнопку.
 
-But Petrov didn’t push the button. He reasoned that the number of missiles was too small to warrant a counterattack, thereby disobeying protocol.
+Если бы он приказал атаковать, погибли бы сотни миллионов людей, это могло бы привести к началу ядерной войны, которая потянула бы за собой миллиарды смертей, — а в худшем случае, конец цивилизации. Наверное, на счет Петрова можно записать спасение миллиарда жизней, что, вполне вероятно, будет преуменьшением, так как ядерная война привела бы к огромным научным, культурным, экономическим и прочим потерям.
 
-If he had ordered a strike, there’s at least a reasonable chance hundreds of millions would have died. The two countries may have even ended up engaged in an all-out nuclear war, leading to billions of deaths and, potentially, the end of civilisation. If we’re being conservative, we might quantify his impact by saying he saved one billion lives. But that could be an underestimate, because a nuclear war would also have devastated scientific, artistic, economic and all other forms of progress leading to a huge loss of life and well-being over the long run. Yet even with the lower estimate, Petrov’s impact likely dwarfs that of Nalin and Landsteiner.
+Так что заслуги вышеупомянутых людей не идут ни в какое сравнение с подвигом Петрова.
+
 
 ![Lives saved by Petrov](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_doctorschart_V2S4.png)[``]
 
