--- a/2.md
+++ b/2.md
@@ -29,45 +29,44 @@ Part 2:
 
 By <span class="byline author vcard"><a href="https://80000hours.org/author/benjamin-todd/" rel="author" class="fn">Benjamin Todd</a></span> &middot; Last updated <time class="update" datetime="2017-04-28T00:00:00+00:00">April 2017</time>
 
-It’s easy to feel like one can person can’t make a difference. The world has so many big problems, and they often seem impossible to solve.
+Легко почувствовать, что один человек не может ничего изменить. В мире так много больших проблем, и зачастую они кажутся нерешаемыми.
 
-So when we started 80,000 Hours — with the aim of helping people do good with their careers — one of the first questions we asked was “how much difference can one person really make?”
+Поэтому, запуская проект «80 тысяч часов» — с целью помочь людям делать мир лучше своей профессией — одним из первых вопросов, которыми мы задались, был: а сколько пользы на самом деле может принести один человек?
 
-We learned that while many common ways to do good, such as becoming a doctor, have less impact than you might first think; others have allowed certain people to achieve an extraordinary impact.
+Мы узнали, что многие распространённые способы приносить добро, вроде становления врачом, оказывают меньше влияния, чем можно сначала подумать; в то же время, другие позволяют некоторым людям достичь необычайного эффекта.
 
-In other words, one person *can* make a difference, but you might have to do something a little unconventional.
+Другими словами, один человек *может* что-то изменить, но вам, возможно, придётся сделать что-то немного необычное.
 
-In this article, we start by estimating how much good you could do by becoming a doctor. Then, we share some stories of the highest-impact people in history, and consider what they mean for your career.
+В этой статье мы начнём с оценки, сколько добра вы можете принести, став доктором. Затем мы поделимся несколькими историямии о людях, сделавших выдающийся вклад в улучшение мира, и обсудим, что они значат для вашего профессионального пути.
 
-*Reading time: 6 minutes*
+ *Время чтения: 6 минут*
 
 
 
 ## How much impact do doctors have?
 
-Если задуматься о профессиях, которые делают мир лучше, на ум обычно приходят профессии учителя, социального работника, врача. Поэтому, запуская проект «80 тысяч часов», мы в первую очередь задались вопросом: а сколько пользы эти профессии приносят на самом деле?
-Сначала мы подсчитали, сколько пользы может принести практикующий врач. Основная цель врачей — улучшать состояние здоровья людей, поэтому мы попытались оценить, сколько «здоровья» прибавляют людям врачи.
-В сотрудничестве с кэмбриджским экспертом в области здравоохранения Грегом Льюисом мы выяснили, что в среднем за всю свою практику врач в Великобритании может в сумме продлить людям жизнь на 120 лет, либо увеличивая продолжительность их жизней, либо улучшая состояние их здоровья. Показатели далеко не точные, но едва ли они могут быть выше более чем в 10 раз. Соответствующее исследование готовится к печати, в сносках можно найти на него ссылку.
-[^:`<p>In our <a href="https://80000hours.org/career-guide/top-careers/profiles/medical-careers/">career review on medical careers</a>, which is based on the research we mention, we provide an optimistic all considered estimate of 4 DALYs averted per year (mean). Over a 35 year career, that’s 140 DALYs averted. Individual doctors will do more or less depending on their ability and speciality.</p>
+Многие люди, желающие помогать другим, становятся врачами. Один из наших ранних читателей, доктор Грег Льюис, сделал именно так. «Я хочу изучать медицину из-за стремления помогать другим, — написал он в своем university application, - и поэтому я не могу упустить шанс посвятить карьеру чему-то стоящему».
+
+Так что мы задались вопросом: сколько пользы на самом деле можно принести, став врачом? В 2012 году мы объединились с Грегом Льюисом, чтобы выяснить это, исследование готовится к публикации.
+
+Основная цель врачей — улучшать состояние здоровья людей, поэтому мы попытались оценить, сколько «здоровья» прибавляют врачи человечеству. Выяснилось, что в среднем за всю свою практику врач в Великобритании в сумме продляет людям жизнь на 140 лет, считая и увеличение продолжительности их жизней, и улучшение состояния их здоровья. Конечно, показатели далеко не точные, но едва ли реальные числа будут в 10 раз больше, чем 140 [^:`<p>In our <a href="https://80000hours.org/career-guide/top-careers/profiles/medical-careers/">career review on medical careers</a>, which is based on the research we mention, we provide an optimistic all considered estimate of 4 DALYs averted per year (mean). Over a 35 year career, that’s 140 DALYs averted. Individual doctors will do more or less depending on their ability and speciality.</p>
 <p>A standard conversion rate is 30 DALYs = 1 life saved.<br />
 <br />
-Source: <a href="https://openknowledge.worldbank.org/bitstream/handle/10986/7039/364010PAPER0Gl101OFFICIAL0USE0ONLY1.pdf?sequence=1">World Bank</a>, p. 402, retrieved 31-March-2016`]
+Source: <a href="https://openknowledge.worldbank.org/bitstream/handle/10986/7039/364010PAPER0Gl101OFFICIAL0USE0ONLY1.pdf?sequence=1">World Bank</a>, p. 402, retrieved 31-March-2016`].
 
-Если применить к этому числу стандартный коэффициент пересчета (который среди прочих используется Всемирным банком), согласно которому 30 дополнительных лет здоровой жизни приравниваются к «спасению одной жизни», то продление жизни на 120 лет можно приравнять к спасению четырех жизней. Без сомнения, это значительный результат, однако это намного меньше, чем мы привыкли ожидать от врачей. Есть три причины такой низкой эффективности:
+Если применить стандартный коэффициент пересчета (среди прочих, используется Всемирным банком), согласно которому 30 дополнительных лет здоровой жизни приравниваются к «спасению одной жизни», то продление жизни на 140 лет можно приравнять к спасению пяти жизней. Без сомнения, это значительный результат, однако гораздо меньший, чем мы привыкли ожидать от врачей. Вот три основные причины такой низкой эффективности:
 
-1.  Среди ученых бытует мнение, что медицина увеличила среднюю продолжительность жизни всего на несколько лет. За последние 100 лет на рост продолжительности жизни больше всего повлияло улучшение питания, санитарных условий, материального благосостояния и других факторов, не связанных с медициной.
+1. Среди ученых бытует мнение, что медицина увеличила среднюю продолжительность жизни только на несколько лет. За последние 100 лет на рост продолжительности жизни больше всего повлияло улучшение питания, санитарных условий, материального благосостояния и других факторов.
+1. Врачи — только часть здравоохранительной системы, которая также зависит от медсестер, больничного персонала, оборудования, инфраструктуры. Эффект от медицинского вмешательства складывается из всех этих элементов.
+1. Что еще важнее, в развитых странах уже много врачей, так что самые важные процедуры будут проведены независимо от того, станете вы врачом или нет. Поэтому дополнительные врачи лишь позволяют проводить процедуры, приносящие менее значимые и более сомнительные результаты.
 
-2. Врачи — только часть здравоохранительной системы, которая также зависит от медсестер, больничного персонала, оборудования, инфраструктуры. Эффект от медицинского вмешательства складывается из всех этих элементов.
-
-3.  Что еще важнее, в развитом мире уже достаточно врачей, так что самые важные процедуры будут проведены независимо от того, станете вы врачом или нет. Поэтому с увеличением количества врачей польза, которую они будут приносить, будет все менее значимой и все более сомнительной.
-
-График демонстрирует зависимость между количеством врачей и уровнем здоровья в разных странах. По вертикали отложен уровень заболеваемости населения, указанный в единицах «DALY»[3] на 100 000 человек, где DALY — это год жизни, потерянный из-за болезни. По горизонтали — количество врачей на 100 000 человек.
+График ниже демонстрирует этот последний момент: зависимость между количеством врачей и уровнем здоровья в разных странах. По вертикали показан уровень заболеваемости популяции, указанный в Годах жизни, скорректированных по нетрудоспособности («DALY») на 100 000 человек, где один DALY — это год жизни, утраченный из-за болезни. По горизонтали — количество врачей на 100 000 человек.
 
 ![DALYs compared to doctors](https://cdn.80000hours.org/wp-content/uploads/2017/03/80K_graph_Dalys-doctors_V1-01.jpg)[`DALYs per 100,000 people versus doctors per 100,000 people. We used WHO data from 2004. Line is the best fitting hyperbola determined by non-linear least square regression. Full explanation in this <a href="https://drive.google.com/file/d/0B2kbwTsBB1fwZThKLVEtME5idU0/view">paper</a>.`]
 
-Как видим, кривая остается практически неизменной, когда на 100 000 человек приходится более 150 врачей. Выше этого уровня (которого достигают чуть ли не все развитые страны) увеличение количества врачей мало что меняет.
+Можно увидеть, значения DALY остаются практически неизменными, когда на 100 000 человек приходится более 150 врачей. После этого момента (которого достигли почти все развитые страны) дополнительные врачи, в среднем, мало что меняют.
 
-Поэтому, если вы станете врачом, вам, вероятно, удастся сделать больше, чем на какой-то обычной работе, но едва ли ваши заслуги перед миром будут поистине значительны.
+Поэтому, если вы станете врачом в богатой стране вроде США или Великобритании, вам, вероятно, удастся сделать больше, чем на многих других работах, и если вы будете исключительным врачом, вы принесёте даже большую польщу, но едва ли ваше влияние на мир будет поистине значительным.
 
 In fact, in the <a href="/career-guide/anyone-make-a-difference/">next article</a>, we’ll show how almost any college graduate can do more to save lives than a typical doctor. And in the guide, we’ll cover many other examples of common but ineffective attempts to do good.
 
@@ -111,12 +110,11 @@ Or, let’s think even more broadly. Roger Bacon and Galileo pioneered the scien
 
 ![Stanislav Petrov probably saved your life](https://cdn.80000hours.org/wp-content/uploads/2016/04/Stanislav-Petrov.png)[``]
 
-Or consider <a href="http://www.bbc.com/news/world-europe-24280831">the story of Stanislav Petrov,</a> a Lieutenant Colonel in the Soviet army during the Cold War. Дело было в 1983 году. Петров был на дежурстве на ракетной базе СССР, когда системы раннего оповещения якобы обнаружили надвигающийся ракетно-ядерный удар со стороны США. По протоколу нужно было нанести ответный удар, но Петров рассудил, что ракет было слишком мало, и не нажал на кнопку.
+Или рассмотрим <a href="http://www.bbc.com/news/world-europe-24280831">историю Станислава Петрова</a>, подполковника совестской армии во время холодной вонйы. Дело было в 1983 году. Петров был на дежурстве на ракетной базе СССР, когда системы раннего оповещения предположительно засекли надвигающийся ракетно-ядерный удар со стороны США. По протоколу нужно было нанести ответный удар.
 
-Если бы он приказал атаковать, погибли бы сотни миллионов людей, это могло бы привести к началу ядерной войны, которая потянула бы за собой миллиарды смертей, — а в худшем случае, конец цивилизации. Наверное, на счет Петрова можно записать спасение миллиарда жизней, что, вполне вероятно, будет преуменьшением, так как ядерная война привела бы к огромным научным, культурным, экономическим и прочим потерям.
+Но Петров не нажал на кнопку, рассудив, что ракет было слишком мало, чтобы оправдать контратаку.
 
-Так что заслуги вышеупомянутых людей не идут ни в какое сравнение с подвигом Петрова.
-
+Если бы он приказал атаковать, с немалой вероятностью погибли бы сотни миллионов людей. Это могло бы даже привести к началу ядерной войны, которая привела бы к миллиардам смертей, — а в худшем случае, к концу цивилизации. Наверное, на счёт Петрова можно записать спасение миллиарда жизней. Но это, вполне вероятно, будет преуменьшением, так как ядерная война ращрушила бы научный, культурный, экономический и все другие фомры прогресса, что привело бы к гибели огромного числа людей в долгосрочной перспективе. Так что подвиг Петрова, вероятно, превосходит заслуги вышеупомянутых людей.
 
 ![Lives saved by Petrov](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_doctorschart_V2S4.png)[``]
 
