--- a/2.md
+++ b/2.md
@@ -114,7 +114,7 @@ Or, let’s think even more broadly. Roger Bacon and Galileo pioneered the scien
 
 Но Петров не нажал на кнопку, рассудив, что ракет было слишком мало, чтобы оправдать контратаку.
 
-Если бы он приказал атаковать, с немалой вероятностью погибли бы сотни миллионов людей. Это могло бы даже привести к началу ядерной войны, которая привела бы к миллиардам смертей, — а в худшем случае, к концу цивилизации. Наверное, на счёт Петрова можно записать спасение миллиарда жизней. Но это, вполне вероятно, будет преуменьшением, так как ядерная война ращрушила бы научный, культурный, экономический и все другие фомры прогресса, что привело бы к гибели огромного числа людей в долгосрочной перспективе. Так что подвиг Петрова, вероятно, превосходит заслуги вышеупомянутых людей.
+Если бы он приказал атаковать, с немалой вероятностью погибли бы сотни миллионов людей. Это могло бы даже привести к началу ядерной войны, которая привела бы к миллиардам смертей, — а в худшем случае, к концу цивилизации. Если подходить к оценке консервативно, наверное, на счёт Петрова можно записать спасение миллиарда жизней. Но это, вполне вероятно, будет преуменьшением, так как ядерная война ращрушила бы научный, культурный, экономический и все другие фомры прогресса, что привело бы к гибели огромного числа людей в долгосрочной перспективе. Так что подвиг Петрова, вероятно, превосходит заслуги вышеупомянутых людей.
 
 ![Lives saved by Petrov](https://cdn.80000hours.org/wp-content/uploads/2016/03/80K_doctorschart_V2S4.png)[``]
 
