--- a/2.md
+++ b/2.md
@@ -20,7 +20,7 @@
         <meta name="twitter:creator" content="@80000hours" />
 ```
 
-Part 2:
+Часть 2:
 
 Может ли один человек сделать мир лучше? О чем говорят факты
 
