--- a/-1.md
+++ b/-1.md
@@ -22,26 +22,23 @@
 
 
 
-Зачем мне нужно это руководство? - 80,000 Часов
+Зачем мне читать это руководство? - 80,000 Часов
 
-# Зачем мне нужно это руководство?
+# Зачем мне читать это руководство?
 
 <span class="byline author vcard"><a href="https://80000hours.org/author/benjamin-todd/" rel="author" class="fn">Бенджамин Тодд</a></span> &middot; Последнее обновление <time class="update" datetime="2017-04-24T00:00:00+00:00">Апрель 2017</time>
 
-У каждого из нас есть около 80 тысяч часов на построение карьеры: 40 часов в неделю, 50 недель в год на протяжении 40 лет. Соответственно, выбор профессии — это одно из самых важных решений в нашей жизни.
+Вы потратите около 80 тысяч часов на профессиональную деятельность: 40 часов в неделю, 50 недель в год на протяжении 40 лет. Так что как потратить это время — это одно из важнейших решений в вашей жизни.
 
-Если ваш выбор будет удачным, вы сможете сделать вклад
-в решение наиболее актуальных мировых проблем и наполнить свою жизнь смыслом и удовлетворением. Но как сделать этот выбор?
+Выбирайте мудро, и вы не только получите насыщенную и интересную жизнь, но и сможете внести вклад в решение наиболее насущных мировых проблем и наполнить свою жизнь смыслом и удовлетворением. Но как сделать этот выбор?
 
-Чтобы ответить на этот вопрос, мы провели пятилетний цикл исследований в сотрудничистве с Оксфордскими академиками. Мы
-являемся некоммерческой организацией, живем за счет частных пожертвований и не берем денег с кадровых агентств или
-работодателей, так что все наши исследования непредвзяты. Единственная наша цель — помочь вам добиться максимальных результатов с помощью выбранной профессии.
+Чтобы ответить на этот вопрос, мы основали независимую некоммерческую организацию и более пяти лет проводили исследования совместно с учёными в Оксфорде. Единственная наша цель — помочь вам оказать максимально возможное положительное влияние.
 
-По пути мы обнаружили несколько неожиданных вещей, и более двух миллионов человек прочитали это руководство.
+По пути мы обнаружили несколько удивительных вещей, и более двух миллионов человек прочитали наши советы.
 
-Хотите узнать больше? Подпишитесь на <a href="/newsletter/">наши объявления</a>, или читайте дальше.
+Хотите узнать больше? Подпишитесь на <a href="/newsletter/">нашу рассылку прямо сейчас</a> или читайте дальше.
 
-![В среднем у человека есть 80000 часов на построение карьеры](https://cdn.80000hours.org/wp-content/uploads/2016/04/80K_Hourdots_V6-3-e1462626926997.png)[`Каждая точка соответствует одному из 80000 часов в вашей карьере. Если бы вы могли сделать свою карьеру всего на 1% эффективнее или всего на 1% приятнее, вы бы наверняка решились пожертвовать ради этого 1% своего карьерного времени. Это было бы 800 часов — пять месяцев полной занятости. Наше руководство займёт всего четыре.`]
+![В среднем у человека есть 80000 часов на профессиональную деятельность](https://cdn.80000hours.org/wp-content/uploads/2016/04/80K_Hourdots_V6-3-e1462626926997.png)[`Каждая точка соответствует одному из 80000 часов в вашей карьере. Если бы вы могли сделать свой профессиональный путь всего на 1% эффективнее или всего на 1% приятнее, вы бы наверняка решились пожертвовать ради этого 1% этого времени. Это было бы 800 часов — пять месяцев полной занятости. Наше руководство займёт всего четыре.`]
 
 ## С чего начать?
 
