--- a/-1.md
+++ b/-1.md
@@ -40,17 +40,17 @@
 
 ![В среднем у человека есть 80000 часов на профессиональную деятельность](https://cdn.80000hours.org/wp-content/uploads/2016/04/80K_Hourdots_V6-3-e1462626926997.png)[`Каждая точка соответствует одному из 80000 часов в вашей карьере. Если бы вы могли сделать свой профессиональный путь всего на 1% эффективнее или всего на 1% приятнее, вы бы наверняка решились пожертвовать ради этого 1% этого времени. Это было бы 800 часов — пять месяцев полной занятости. Наше руководство займёт всего четыре.`]
 
-## С чего начать?
+## Как мы начали?
 
-В 2011 году мы были в Оксфорде и сами ломали головы над тем, что же делать дальше со своей карьерой. Каждому из нас хотелось найти такую работу, которая приносила бы удовольствие нам и пользу миру.
+Ешё в 2011 году мы были студентами в Оксфорде в Великобритании. Мы пытались выяснить, как бы заниматься любимой работой, которая оказывала бы значительное положительное влияние на мир.
 
-Мы гадали: стоит ли пойти в неприбыльную организацию, податься в науку, заняться коммерческой деятельностью и помогать людям, делая пожертвования, или вообще предпринять что-то кардинально иное?
+Мы задавались вопросами: стоит ли работать в некоммерческой организации? Пойти в аспирантуру? Заняться бизнесомЭ чтобы получать высокие зарплаты и отдавать деньги через благотворительность? Или делать что-то кардинально иное?
 
-Но никто не мог дать нам дельный совет. Большинство карьерных рекомендаций ограничивались алгоритмом поиска работы, и нигде не значилось, как правильно расставить приоритеты. Большинство людей, с которыми нам довелось пообщаться, *никуда не обращались* за советом по профориентации — они могли просто поговорить с друзьями и старались разобраться во всем самостоятельно.
+Большинство карьерных рекомендаций, которые мы читали, обыли о том, как устроиться на разные работы, но немногие советовали, на какие рабочие места стремиться в первую очередь. граничивались алгоритмом поиска работы, и нигде не значилось, как правильно расставить приоритеты. Большинство людей, которых мы знали, *даже не использовали* советы по выбору профессионального пути, вместо этого полагаясь на разговоры с друзьями.
 
-Когда речь заходила о том, чтобы принести какую-либо пользу обществу, все советы сводились к социальной работе, преподаванию или ответственному бизнесу. Нам было очевидно, что это далеко не лучшие из доступных вариантов. 
+Что касается принесения добра вашей профессиональной деятельностью, люди предлагали вещи вроде медицины, социальной работы, преподавания или работы по вопросам социальной ответственности компаний. Но бы какими ценными не были эти профессии, мы чувствовали, что могут быть ещё более эффективные варианты принесения пользы.
 
-Например, мы заметили, что многие влиятельные исторические личности пришли из других областей. Мартин Лютер Кинг младший был пастором, который положил начало современному представлению о гражданских правах. Билл Гейтс — программист миллиардер, который спас миллионы детских жизней через пожертвования. Мария Кюри was a scientist, who pioneered life-saving medical technologies through her research into radioactivity. (это сложно перевести)
+Например, мы заметили, что многие сильно повлиявшие на мир исторические личности пришли из других областей. Мартин Лютер Кинг-младший был пастором, который сформировал движение за гражданские права. Билл Гейтс — программист-миллиардер, который спас миллионы детских жизней, жертвуя часть своего состояния. Мария Кюри была учёной, которая благодаря своим исследованиям радиоактивности стала новатором в области спасающих жизни медицинских технологий.
 
 So, we started doing our own research into which career to choose and giving talks to other students. And to our surprise, people listened, and some started to completely change what they did with their lives.
 
