--- a/2.md
+++ b/2.md
@@ -1,11 +1,11 @@
 ```
-        <meta name="description" content="Many common ways to do good don&#039;t make as much difference as you first think. But it&#039;s possible to have a huge impact by being a little unconventional." />
-        <link rel="canonical" href="https://80000hours.org/career-guide/how-much-difference-can-one-person-make/" />
-        <meta property="og:locale" content="en_US" />
+        <meta name="description" content="Многие распространённые способы делать добро улучшают мир не так сильно, как можно сначала подумать. Но можно оказать огромное положительное влияние, занимаясь немного необычным." />
+        <link rel="canonical" href="https://80000hours.ru/career-guide/how-much-difference-can-one-person-make/" />
+        <meta property="og:locale" content="ru_RU" />
         <meta property="og:type" content="article" />
-        <meta property="og:title" content="How much good can one person do? Here&#039;s what the evidence says." />
-        <meta property="og:description" content="Many common ways to do good, such as becoming a doctor, have less impact than you might first think. That said, it&#039;s possible for one person to make a huge difference, though it might involve doing something a little unconventional." />
-        <meta property="og:url" content="https://80000hours.org/career-guide/how-much-difference-can-one-person-make/" />
+        <meta property="og:title" content="Может ли один человек сделать мир лучше? О чем говорят факты" />
+        <meta property="og:description" content="Многие распространённые способы делать добро, вроде становления врачом, оказывают меньше положительного влияния, чем можно сперва подумать. Тем не менее, действия одного человека могут иметь огромное значение, хотя это может включать что-то необычное." />
+        <meta property="og:url" content="https://80000hours.ru/career-guide/how-much-difference-can-one-person-make/" />
         <meta property="og:site_name" content="80,000 Hours" />
         <meta property="article:publisher" content="https://www.facebook.com/80000Hours" />
         <meta property="og:image" content="https://cdn.80000hours.org/wp-content/uploads/2017/04/80K_graph_Dalys-doctors_V3-01.jpg" />
@@ -13,8 +13,8 @@
         <meta property="og:image:width" content="1750" />
         <meta property="og:image:height" content="1541" />
         <meta name="twitter:card" content="summary_large_image" />
-        <meta name="twitter:description" content="Many common ways to do good, such as becoming a doctor, have less impact than you might first think. That said, it&#039;s possible for one person to make a huge difference, though it might involve doing something a little unconventional." />
-        <meta name="twitter:title" content="How much good can one person do? Here&#039;s what the evidence says." />
+        <meta name="twitter:description" content="Многие распространённые способы делать добро, вроде становления врачом, оказывают меньше положительного влияния, чем можно сперва подумать. Тем не менее, действия одного человека могут иметь огромное значение, хотя это может включать необычные действия." />
+        <meta name="twitter:title" content="Сколько добра может сделать один человек? О чем говорят факты." />
         <meta name="twitter:site" content="@80000hours" />
         <meta name="twitter:image" content="https://cdn.80000hours.org/wp-content/uploads/2017/04/80K_graph_Dalys-doctors_V3-01.jpg" />
         <meta name="twitter:creator" content="@80000hours" />
