--- a/5.md
+++ b/5.md
@@ -31,13 +31,13 @@
 
 ![](https://cdn.80000hours.org/wp-content/uploads/2017/03/60964-large-1024x536.jpg)
 
-В течение восьми лет мы тратили большую часть времени на попытки понять ответ на простой вопрос: каковы самые большие и самые насущные мировые проблемы?
+Мы провели большую часть последних восьми лет, пытаясь ответить на простой вопрос: каковы самые большие и самые насущные мировые проблемы?
 
 Нам хотелось, чтобы наши карьеры действительно меняли мир к лучшему, так что мы стали искать, в каких областях наши усилия будут наиболее эффективными и приведут к максимальному позитивному сдвигу.
 
 Наш анализ показал что выбор правильной задачи для приложения своих навыков может увеличить ваш вклад более чем в 100 раз, и это может стать самым важным решением в вашей жизни.
 
-Пытаясь ответить на данный вопрос, нам пришлось подвергнуть сомнению всё что мы думали мы знаем, а затем делать это ещё и ещё.
+Пытаясь ответить на данный вопрос, нам пришлось подвергнуть сомнению всё, о чём мы думали, что знаем, а затем делать это снова и снова.
 
 Here, we give a summary of what we’ve learned.[^:`<p>"Us" refers to the 80,000 Hours team. The primary author of the article is Benjamin Todd, the CEO of 80,000 Hours. He first met Will MacAskill, with whom he founded 80,000 Hours, in 2009 through Giving What We Can. In 2009, he also met other initiators of the Centre for Effective Altruism, such as Toby Ord. It was at this point he started to actively think about this question, which is why we say "8 years", even though 80,000 Hours was only founded in 2011. Will and Toby had been thinking about these issues for longer.`] Read on to hear why ending diarrhoea might save as many lives as world peace, why artificial intelligence might be even more important, and what to do in your own career to make the most urgent changes happen.
 
