--- a/2.md
+++ b/2.md
@@ -58,7 +58,7 @@ Source: <a href="https://openknowledge.worldbank.org/bitstream/handle/10986/7039
 
 1. Среди ученых бытует мнение, что медицина увеличила среднюю продолжительность жизни только на несколько лет. За последние 100 лет на рост продолжительности жизни больше всего повлияло улучшение питания, санитарных условий, материального благосостояния и других факторов.
 1. Врачи — только часть здравоохранительной системы, которая также зависит от медсестер, больничного персонала, оборудования, инфраструктуры. Эффект от медицинского вмешательства складывается из всех этих элементов.
-1. Что еще важнее, в развитых странах уже много врачей, так что самые важные процедуры будут проведены независимо от того, станете вы врачом или нет. Поэтому дополнительные врачи лишь позволяют проводить процедуры, приносящие менее значимые и более сомнительные результаты.
+1. Что еще важнее, в развитых странах уже много врачей, так что самые важные процедуры будут проведены независимо от того, станете вы врачом или нет. Поэтому *дополнительные* врачи лишь позволяют проводить процедуры, приносящие менее значимые и более сомнительные результаты.
 
 График ниже демонстрирует этот последний момент: зависимость между количеством врачей и уровнем здоровья в разных странах. По вертикали показан уровень заболеваемости популяции, указанный в Годах жизни, скорректированных по нетрудоспособности («DALY») на 100 000 человек, где один DALY — это год жизни, утраченный из-за болезни. По горизонтали — количество врачей на 100 000 человек.
 
